# nablachem

./: .gitignore  Makefile  README.md  pyproject.toml  sandbox.py
.github/workflows/: tests.yml
database/: space-exact-10.txt  space-exact-11.txt  space-exact-13.txt  space-exact-14.txt  space-exact-16.txt  space-exact-18.txt  space-exact-2.txt  space-exact-20.txt  space-exact-21.txt  space-exact-22.txt  space-exact-4.txt  space-exact-9.txt  space-extend-A.txt  space-nxstrategy5_with_coregraph2.txt  space-pure-16.txt  space-pure-22.txt  space-pure-23.txt  space-pure-24.txt  space-pure-26.txt  space-pure-27.txt  space-pure-28.txt  space-pure-29.txt
examples/alchemy/: hessian.py
examples/space/: count.py  random-molecule.py  scaling-with-diversity.py
examples/space/dataset_analysis/: ANI.ipynb  ANI1_sf_counts.csv  GDB.ipynb  QM.ipynb  QM9_sf_count.csv  gdb13_sf_counts.csv  plot_KS.ipynb  sf_functions.py
maintenance/: krr_datasets.py  small-exact.py  space_cache.py  space_db.py  space_fit.py  space_fit.py.output  space_run_new_strategy.py
src/nablachem/: alchemy.py  cabs.py  dimensionality.py  space.py  utils.py
src/nablachem/analyticgrads/: AP_class.py  AP_utils.py  FcMole.py  LICENSE  aaff.py  alch_deriv.py  test.py
src/nablachem/cache/: fip-3.txt  fip-5.txt  fip-6.txt  fip-7.txt  fip-8.txt  space-exact-12.txt  space-exact-15.txt  space-exact-17.txt  space-exact-19.txt  space-exact-23.txt  space-exact-24.txt  space-pure-17.txt  space-pure-18.txt  space-pure-19.txt  space-pure-20.txt  space-pure-25.txt  space-pure-30.txt  space-pure-31.txt
src/nablachem/hotspot/: space.cpp
src/nablachem/krr/: cli.py  dataset.py  export.py  features.py  kernels.py  krr.py  matrix.py  utils.py  vis.py
src/nablachem/space/: __init__.py  algos.py  approximate.py  editdistance.py  exact.py  utils.py
src/nablachem/utils/: connsampler.py  graph.py  perftracker.py
tests/: test_alchemy.py  test_cabs.py  test_dataset.py  test_dimensionality.py  test_features.py  test_kernels.py  test_matrix.py  test_space.py  test_utils.py
tests/cabs/: pcseg-cabs.gbs
tests/cabs/CO/: run.inp  run.out
tests/cabs/H2O/: run.inp  run.out
tests/cabs/N2/: run.inp  run.out
tests/data/: molecules.jsonl
web/random-molecule.org/: Dockerfile  config.toml  requirements.txt
web/random-molecule.org/app/: app.py
