[tool.poetry]
name = "nablachem"
version = "25.9"
description = "Easy access to research code."
authors = ["von Rudorff, Guido Falk <vonrudorff@uni-kassel.de>"]
license = "LGPL"
readme = "README.md"
homepage = "https://nablachem.org/code"
repository = "https://github.com/NablaChem/nablachem"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
findiff = "^0.10.0"
numpy = ">=2.0.0"
scipy = ">=1.12.0"
pysmiles = "^2.0.0"
networkx = "^3.4.2"
pyparsing = "^3.2.1"
tqdm = "^4.67.1"
mpmath = "^1.3.0"
msgpack = "^1.1.1"
qmllib = "^1.1.9"
ase = ">=3.23.0"
click = ">=8.0.0"
python-igraph = ">=0.11.0"
joblib = ">=1.3.0"
numba = ">=0.59.0"
plotly = ">=5.0.0"
pyscf = ">=2.0.0"
streamlit = ">=1.30.0"
structlog = ">=24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-testmon = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
