[tool.poetry]
name = "nablachem"
version = "25.9"
description = "Easy access to research code."
authors = ["von Rudorff, Guido Falk <vonrudorff@uni-kassel.de>"]
license = "LGPL"
readme = "README.md"
homepage = "https://nablachem.org/code"
repository = "https://github.com/NablaChem/nablachem"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
findiff = "^0.13.1"
numpy = ">=2.0.0"
scipy = ">=1.12.0"
pysmiles = "^2.0.1"
networkx = "^3.4.2"
pyparsing = "^3.3.2"
tqdm = "^4.67.3"
mpmath = "^1.3.0"
msgpack = "^1.1.1"
qmllib = "^1.1.9"
ase = ">=3.23.0"
click = ">=8.0.0"
python-igraph = ">=0.11.0"
joblib = ">=1.3.0"
numba = ">=0.59.0"
plotly = ">=5.0.0"
pyscf = "^2.12.1"
streamlit = ">=1.30.0"
structlog = ">=24.0.0"
pbr = "^7.0.3"
setuptools = "^82.0.0"
tzdata = "^2025.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-testmon = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
